@@ -13,7 +13,6 @@ build_requires:
   English: 0
   Error::Pure::Utils: 0
   ExtUtils::MakeMaker: 6.59
-  Tags::Output::Raw: 0
   Tags::Output::Structure: 0
   Test::MockObject: 0
   Test::More: 0
