@@ -5,27 +5,31 @@ use Data::HTML::Element::Button;
 use English;
 use Error::Pure::Utils qw(clean);
 use Tags::HTML::Element::Button;
-use Tags::Output::Raw;
+use Tags::Output::Structure;
 use Test::More 'tests' => 6;
 use Test::NoWarnings;
 
 # Test.
-my $tags = Tags::Output::Raw->new;
+my $tags = Tags::Output::Structure->new;
 my $obj = Tags::HTML::Element::Button->new(
 	'tags' => $tags,
 );
 my $button = Data::HTML::Element::Button->new;
 $obj->init($button);
 $obj->process;
-my $ret = $tags->flush(1);
-my $right_ret = <<'END';
-<button type="button"></button>
-END
-chomp $right_ret;
-is($ret, $right_ret, "Button defaults.");
+my $ret_ar = $tags->flush(1);
+is_deeply(
+	$ret_ar,
+	[
+		['b', 'button'],
+		['a', 'type', 'button'],
+		['e', 'button'],
+	],
+	'Get Tags code (default).',
+);
 
 # Test.
-$tags = Tags::Output::Raw->new;
+$tags = Tags::Output::Structure->new;
 $obj = Tags::HTML::Element::Button->new(
 	'tags' => $tags,
 );
@@ -36,15 +40,22 @@ $button = Data::HTML::Element::Button->new(
 );
 $obj->init($button);
 $obj->process;
-$ret = $tags->flush(1);
-$right_ret = <<'END';
-<button type="button" class="foo" name="button-name" value="button value"></button>
-END
-chomp $right_ret;
-is($ret, $right_ret, "Button with attributes and value.");
+$ret_ar = $tags->flush(1);
+is_deeply(
+	$ret_ar,
+	[
+		['b', 'button'],
+		['a', 'type', 'button'],
+		['a', 'class', 'foo'],
+		['a', 'name', 'button-name'],
+		['a', 'value', 'button value'],
+		['e', 'button'],
+	],
+	'Get Tags code (with CSS class, name and value).',
+);
 
 # Test.
-$tags = Tags::Output::Raw->new;
+$tags = Tags::Output::Structure->new;
 $obj = Tags::HTML::Element::Button->new(
 	'tags' => $tags,
 );
@@ -54,22 +65,31 @@ $button = Data::HTML::Element::Button->new(
 );
 $obj->init($button);
 $obj->process;
-$ret = $tags->flush(1);
-$right_ret = <<'END';
-<button type="button" autofocus="autofocus" disabled="disabled"></button>
-END
-chomp $right_ret;
-is($ret, $right_ret, "Button with boolean values.");
+$ret_ar = $tags->flush(1);
+is_deeply(
+	$ret_ar,
+	[
+		['b', 'button'],
+		['a', 'type', 'button'],
+		['a', 'autofocus', 'autofocus'],
+		['a', 'disabled', 'disabled'],
+		['e', 'button'],
+	],
+	'Get Tags code (with boolean values).',
+);
 
 # Test.
-$tags = Tags::Output::Raw->new;
+$tags = Tags::Output::Structure->new;
 $obj = Tags::HTML::Element::Button->new(
 	'tags' => $tags,
 );
 $obj->process;
-$ret = $tags->flush(1);
-$right_ret = '';
-is($ret, $right_ret, "Without initialization.");
+$ret_ar = $tags->flush(1);
+is_deeply(
+	$ret_ar,
+	[],
+	'Get Tags code (without initialization).',
+);
 
 # Test.
 $obj = Tags::HTML::Element::Button->new;
